// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/tour/demo/basic.md correctly 1`] = `
<div
  class="ant-space ant-space-horizontal ant-space-align-center"
>
  <div
    class="ant-space-item"
    style="margin-right:8px"
  >
    <button
      class="ant-btn ant-btn-primary"
      type="button"
    >
      <span>
        Show
      </span>
    </button>
  </div>
  <div
    class="ant-space-item"
    style="margin-right:8px"
  >
    <button
      class="ant-btn ant-btn-default"
      disabled=""
      type="button"
    >
      <span>
        Cover
      </span>
    </button>
  </div>
  <div
    class="ant-space-item"
  >
    <button
      class="ant-btn ant-btn-default"
      disabled=""
      type="button"
    >
      <span>
        Placement
      </span>
    </button>
  </div>
</div>
`;

exports[`renders ./components/tour/demo/primary.md correctly 1`] = `
<div
  class="ant-space ant-space-horizontal ant-space-align-center"
>
  <div
    class="ant-space-item"
  >
    <button
      class="ant-btn ant-btn-primary"
      type="button"
    >
      <span>
        Show
      </span>
    </button>
  </div>
</div>
`;
